Updates to extended paper

--- a/Phaistos Disc.ipynb
+++ b/Phaistos Disc.ipynb
@@ -450,7 +450,7 @@
     "\"𐇪\": \"𐙒\",  \n",
     "\"𐇫\": \"\", \n",
     "\"𐇬\": \"𐙁\",  \n",
-    "\"𐇭\": \"\", \n",
+    "\"𐇭\": \"𐘏\", \n",
     "\"𐇮\": \"𐙂\",  \n",
     "\"𐇯\": \"𐘻\",  \n",
     "\"𐇰\": \"\", \n",
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -735,6 +735,7 @@
     }
    ],
    "source": [
+    "import itertools as it\n",
     "def product(*args, repeat=1):\n",
     "    # product('ABCD', 'xy') --> Ax Ay Bx By Cx Cy Dx Dy\n",
     "    # product(range(2), repeat=3) --> 000 001 010 011 100 101 110 111\n",
