--- a/Analysis-Davis2018/Phaistos-Davis 2018.ipynb
+++ b/Analysis-Davis2018/Phaistos-Davis 2018.ipynb
@@ -1,40 +1,40 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Phaistos Disc Side A\n",
-      " 𐇑𐇛𐇜𐇐𐇡\n",
-      " 𐇧𐇷𐇛 𐇬𐇼𐇖\n",
-      " 𐇬𐇬𐇱 𐇑𐇛𐇓𐇷𐇰 𐇪𐇼𐇖𐇛 𐇪𐇻𐇗 𐇑𐇛𐇕𐇡 𐇮𐇩𐇲 𐇑𐇛𐇸𐇢𐇲 𐇐𐇸𐇷𐇖 𐇑𐇛𐇯𐇦𐇵\n",
-      " 𐇶𐇚 𐇑𐇪𐇨𐇙𐇦𐇡 𐇫𐇐\n",
-      " 𐇑𐇛𐇮𐇩\n",
-      " 𐇑𐇛𐇪𐇪𐇲𐇴𐇤 𐇰𐇦 𐇑𐇛𐇮𐇩\n",
-      " 𐇑𐇪𐇨𐇙𐇦𐇡 𐇫𐇐\n",
-      " 𐇑𐇛𐇮𐇩\n",
-      " 𐇑𐇛𐇪𐇝𐇯𐇡𐇪 𐇕𐇡𐇠𐇢 𐇮𐇩𐇛 𐇑𐇛𐇜𐇐 𐇦𐇢𐇲\n",
-      " 𐇙𐇒𐇵 𐇑𐇛𐇪𐇪𐇲𐇴𐇤 𐇜𐇐 𐇙𐇒𐇵 \n",
-      "\n",
-      "\n",
-      "Phaistos Disc Side B\n",
-      " 𐇑𐇛𐇥𐇷𐇖 𐇪𐇼𐇖𐇲 𐇑𐇴𐇦𐇔\n",
-      " 𐇥𐇨𐇪 𐇰𐇧𐇣𐇛 𐇟𐇦𐇡𐇺\n",
-      " 𐇜𐇐𐇶𐇰 𐇞𐇖𐇜𐇐𐇡 𐇥𐇴𐇹𐇨 𐇖𐇧𐇷𐇲 𐇑𐇩𐇳𐇷 𐇪𐇨𐇵𐇐 𐇬𐇧𐇧𐇣𐇲 𐇟𐇝𐇡 𐇬𐇰𐇐 𐇕𐇲𐇯𐇶𐇰 𐇑𐇘𐇪𐇐 𐇬𐇳𐇖𐇗\n",
-      " 𐇬𐇗𐇜 𐇬𐇼𐇖\n",
-      " 𐇥𐇬𐇳𐇖𐇗\n",
-      " 𐇪𐇱𐇦𐇨 𐇖𐇡𐇲 𐇖𐇼𐇖\n",
-      " 𐇖𐇦𐇡𐇧 𐇥𐇬𐇳𐇖𐇗\n",
-      " 𐇘𐇭𐇶𐇡𐇖 𐇑𐇕𐇲𐇦𐇖 𐇬𐇱𐇦𐇨 𐇼𐇖\n",
-      " \n"
-     ]
-    }
-   ],
+   "source": [
+    "# Recreating the Results in \"The Phaistos Disk: A New Way of Viewing the Language Behind the Script\" (Davis 2018)\n",
+    "\n",
+    "I use the Linear A corpus at https://lineara.xyz to recreate the results from Brent Davis' paper showing a \n",
+    "statistically significant relationship between the bigrams in the Phaistos Disc and Linear A.\n",
+    "\n",
+    "I find that one bigram identified as common between the two is doubtful. '𐘠𐘚' (TI-I) does not actually appear in Linear A. Where the two syllabograms are adjacent they are not word-internal, i.e. they are in adjacent words rather than the same word:\n",
+    "\n",
+    "![alt text](PKZa11.png \"Title\")\n",
+    "![alt text](PYRWc4.png \"Title\")\n",
+    "\n",
+    "\n",
+    "Another potential source for the identification is the ligatured version of 𐘚(TI) which is 𐘛(*28B). We find a single instance of '𐘠𐘛' (TI-*28B) in the Linear A corpus, in ZA6b:\n",
+    "\n",
+    "![alt text](ZA6b.png \"Title\")\n",
+    "\n",
+    "It is not clear to me if it is valid to treat (TI-*28B) as the equivalent of (TI-I). If it is not, then the number of matching bi-grams between the Phaistos disc and the Linear A corpus must be revised down to 16. This no longer falls within the region of statistical significance, which Davis identifies as 16.4 or above.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recreating the Results of Davis 2018\n",
+    "First we import the Phaistos Disc inscription. We also initialize a list of symbols from the Phaistos Disc and all known symbols from Linear A."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import json\n",
     "import itertools as it\n",
@@ -51,21 +51,6 @@
     "\n",
     "pd_inscription = pd_inscription_a + pd_inscription_b\n",
     "pd_words = pd_inscription.replace('𐇽','').split('|')\n",
-    "\n",
-    "print(\"Phaistos Disc Side A\")\n",
-    "print(' ' + ' '.join(w.replace('𐇽','\\n') for w in pd_words_a))\n",
-    "\n",
-    "print('\\n')\n",
-    "print(\"Phaistos Disc Side B\")\n",
-    "print(' ' + ' '.join(w.replace('𐇽','\\n') for w in pd_words_b))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "pd_symbols = [\"𐇐\", \"𐇑\", \"𐇒\", \"𐇓\", \"𐇔\", \"𐇕\", \"𐇖\", \"𐇗\", \"𐇘\", \"𐇙\", \"𐇚\", \n",
     "    \"𐇛\", \"𐇜\", \"𐇝\", \"𐇞\", \"𐇟\", \"𐇠\", \"𐇡\", \"𐇢\", \"𐇣\", \"𐇤\", \"𐇥\", \"𐇦\", \"𐇧\", \"𐇨\", \"𐇩\", \"𐇪\", \"𐇫\", \"𐇬\", \"𐇭\", \"𐇮\", \"𐇯\"\n",
@@ -96,12 +81,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we import all known words from Linear A into a list called `la_words`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_file = open('LinearAWords.json')\n",
+    "json_file = open('../Data/LinearAWords.json')\n",
     "inscriptions = json.load(json_file)\n",
     "\n",
     "la_words = []\n",
@@ -120,8 +112,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can create lists of unique bigrams in Linear A and the Phaistos disc."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -137,15 +136,7 @@
       "\n",
       "Phaistos Disc:\n",
       "Unique bigrams 115 Total bigrams 180\n",
-      "Unique symbols in bigrams 45\n",
-      "\n",
-      "Linear A:\n",
-      "Unique trigrams 949 Total trigrams 1055\n",
-      "Unique symbols in trigrams 123\n",
-      "\n",
-      "Phaistos Disc:\n",
-      "Unique trigrams 93 Total trigrams 119\n",
-      "Unique symbols in trigrams 43\n"
+      "Unique symbols in bigrams 45\n"
      ]
     }
    ],
@@ -162,8 +153,6 @@
     "ngram_infos = [\n",
     "    [la_bigrams, \"bi\", 2, la_words, \"Linear A\"],\n",
     "    [pd_bigrams, \"bi\", 2, pd_words, \"Phaistos Disc\"],\n",
-    "    [la_trigrams, \"tri\", 3, la_words, \"Linear A\"],\n",
-    "    [pd_trigrams, \"tri\", 3, pd_words, \"Phaistos Disc\"],\n",
     "]\n",
     "\n",
     "for ngram_info in ngram_infos:\n",
@@ -183,9 +172,51 @@
     "\n",
     "la_bigrams = ngram_infos[0][0]\n",
     "pd_bigrams = ngram_infos[1][0]\n",
-    "la_trigrams = ngram_infos[2][0]\n",
-    "pd_trigrams = ngram_infos[3][0]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With these we now have what we need to rerun Davis' analysis comparing the bigrams that appear in both Linear A and the disc.\n",
+    "\n",
+    "Davis gives the homomorphs used for his analysis as follows:\n",
+    "![alt text](14homomorphs.png \"Title\")\n",
+    "\n",
+    "We implement the same here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Brent Davis 2018 mapping\n",
+    "pd_la_strong_map = {\n",
+    "\"𐇛\": \"𐘿\",  \n",
+    "\"𐇬\": \"𐙁\",  \n",
+    "\"𐇼\": \"𐘽\", \n",
+    "\"𐇖\": \"𐘠\",  \n",
+    "\"𐇱\": \"𐘢\",  \n",
+    "\"𐇗\": \"𐘚\",  \n",
+    "\"𐇮\": \"𐙂\",  \n",
+    "\"𐇲\": \"𐘃\",  \n",
+    "\"𐇢\": \"𐘀\",  \n",
+    "\"𐇦\": \"𐘅\",  \n",
+    "\"𐇨\": \"𐙅\",  \n",
+    "\"𐇥\": \"𐘞\",  \n",
+    "\"𐇟\": \"𐘸\", \n",
+    "\"𐇳\": \"𐘝\",  \n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we see if we can get the same number of bigrams as Davis in the disc:"
    ]
   },
   {
@@ -203,23 +234,6 @@
    ],
    "source": [
     "\n",
-    "# Brent Davis 2018 mapping\n",
-    "pd_la_strong_map = {\n",
-    "\"𐇛\": \"𐘿\",  \n",
-    "\"𐇬\": \"𐙁\",  \n",
-    "\"𐇼\": \"𐘽\", \n",
-    "\"𐇖\": \"𐘠\",  \n",
-    "\"𐇱\": \"𐘢\",  \n",
-    "\"𐇗\": \"𐘚\",  \n",
-    "\"𐇮\": \"𐙂\",  \n",
-    "\"𐇲\": \"𐘃\",  \n",
-    "\"𐇢\": \"𐘀\",  \n",
-    "\"𐇦\": \"𐘅\",  \n",
-    "\"𐇨\": \"𐙅\",  \n",
-    "\"𐇥\": \"𐘞\",  \n",
-    "\"𐇟\": \"𐘸\", \n",
-    "\"𐇳\": \"𐘝\",  \n",
-    "}\n",
     "\n",
     "# Use the provisional PD to LA mapping above to find common bigrams between LA and the Disc\n",
     "pd_inscription_as_la = list(map(lambda x: pd_la_strong_map[x] if x in pd_la_strong_map else x, pd_inscription))\n",
@@ -231,8 +245,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This matches the 23 bigrams given in Table 40 by Davis:\n",
+    "    \n",
+    "![alt text](23pairs.png \"Title\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No we can count the number of pairs that match between Linear A and the disc."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,9 +273,7 @@
       " 16 instances\n",
       " 30 occurences in Linear A\n",
       " 30 occurences in Phaistos Disc\n",
-      " [('𐘀𐘃', 2, 2), ('𐘅𐘀', 1, 1), ('𐘅𐘠', 4, 1), ('𐘝𐘠', 1, 3), ('𐘞𐙁', 3, 2), ('𐘠𐘃', 1, 1), ('𐘠𐘅', 2, 1), ('𐘠𐘽', 2, 1), ('𐘢𐘅', 2, 2), ('𐘸𐘅', 2, 1), ('𐘽𐘠', 1, 6), ('𐘿𐙂', 1, 3), ('𐙁𐘚', 5, 1), ('𐙁𐘢', 1, 2), ('𐙁𐘽', 1, 2), ('𐙁𐙁', 1, 1)]\n",
-      "Mapped bigrams that don't appear in Linear A\n",
-      " 7 [('𐘃𐘅', 1), ('𐘅𐙅', 2), ('𐘞𐙅', 1), ('𐘠𐘚', 3), ('𐘠𐘿', 1), ('𐘿𐘞', 1), ('𐙁𐘝', 3)]\n"
+      " [('𐘀𐘃', 2, 2), ('𐘅𐘀', 1, 1), ('𐘅𐘠', 4, 1), ('𐘝𐘠', 1, 3), ('𐘞𐙁', 3, 2), ('𐘠𐘃', 1, 1), ('𐘠𐘅', 2, 1), ('𐘠𐘽', 2, 1), ('𐘢𐘅', 2, 2), ('𐘸𐘅', 2, 1), ('𐘽𐘠', 1, 6), ('𐘿𐙂', 1, 3), ('𐙁𐘚', 5, 1), ('𐙁𐘢', 1, 2), ('𐙁𐘽', 1, 2), ('𐙁𐙁', 1, 1)]\n"
      ]
     }
    ],
@@ -257,12 +285,60 @@
     "      \"%s occurences in Linear A\\n\" % sum([b for a,b,c in bg_both]),\n",
     "      \"%s occurences in Phaistos Disc\\n\" % sum([c for a,b,c in bg_both]),\n",
     "      bg_both)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our output also gives the number of occurences of the bigrams in each of Linear A and the Disc, both as a total for all bigrams and for each bigram individually. So for '𐘸𐘅' we find that it occurs twice in Linear A and once on the Phaistos Disc, i.e.: ('𐘸𐘅', 2, 1).\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reviewing the Results\n",
+    "We find only 16 instances of Disc bigrams appearing in Linear A. This is one less than found by Davis. \n",
+    "\n",
+    "Let's take a look at the ones we think are missing according to our own analysis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapped bigrams that don't appear in Linear A\n",
+      " 7 [('𐘃𐘅', 1), ('𐘅𐙅', 2), ('𐘞𐙅', 1), ('𐘠𐘚', 3), ('𐘠𐘿', 1), ('𐘿𐘞', 1), ('𐙁𐘝', 3)]\n"
+     ]
+    }
+   ],
+   "source": [
     "bg_pd_only = pd_bigrams_both - set(la_bigrams)\n",
     "bg_pd_only = sorted([(bg, pd_la_bigrams.count(bg)) \n",
     "                  for bg in bg_pd_only])\n",
     "print(\"Mapped bigrams that don't appear in Linear A\\n\", \n",
     "      len(bg_pd_only), bg_pd_only)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can compare this with the table from (Davis 2018):\n",
+    "\n",
+    "![alt text](17bigrams.png \"Title\")\n",
+    "\n",
+    "The difference is the bigram: '𐘠𐘚', (when transliterated: TI-I). \n",
+    "\n"
    ]
   }
  ],
